# arbiter-ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  plan.md  prd.md  scratch.txt  spec.md
backend/: .env.example  .env.production.example  .env.sandbox.example  Dockerfile  alembic.ini  pyproject.toml  verify_bedrock.py
backend/alembic/: env.py
backend/alembic/versions/: 053437c609a1_add_persona_to_sessions.py  12bf466e36fd_consolidate_auth_and_phase_6_models.py  3e3eccf9015e_add_license_provenance.py  4fc7b20cadfa_add_subscription_tiers.py  6c5b4a3d2e1f_add_default_ruling_privacy_to_users.py  8f1e2d3c4b5a_ensure_session_persona_columns.py  99c37ef7c43c_add_publisher_display_name_to_official_.py  a1b2c3d4e5f6_add_uuid_server_defaults.py  a6983e1c5e84_initial_schema_all_8_tables.py  b51cd47aae46_merge_heads.py  b9f2a3c4d5e6_add_role_to_users.py  c7d8e9f0a1b2_add_game_name_and_party_shares.py  d1e2f3a4b5c6_add_pgvector_and_rule_chunks.py  f6a7b8c9d0e1_merge_pgvector_and_provenance_heads.py  merge_uuid_defaults_and_persona_columns.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: abuse_detection.py  deps.py  ip_rate_limit.py  middleware.py  rate_limit.py
backend/app/core/: __init__.py  adjudication.py  chunking.py  environment.py  ingestion.py  preflight.py  protocols.py  registry.py
backend/app/db/: __init__.py
backend/app/mock/: __init__.py  factory.py  fixtures.py
backend/scripts/: preflight.py  seed_catalog.py  sync_catalog_live.py  sync_open_rules.py
backend/tests/: conftest.py
(+175 files in other folders)
